--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -195,7 +195,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29_1">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn31">
-                                        <wm-radioset height="auto" dataset="Immediately,Daily(Recommended),Weekly,Monthly,None" selectedvalue="bind:Variables.CurrentUserDetails.dataSet.communicationFrequency" name="radiosetCF" required="true"></wm-radioset>
+                                        <wm-radioset height="auto" dataset="Immediately,Daily (Recommended),Weekly,Monthly,Never" selectedvalue="bind:Variables.CurrentUserDetails.dataSet.communicationFrequency" name="radiosetCF" required="true"></wm-radioset>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow30">
