- Added config fields for database credentials to Municipality - Added config field for table name to FormTypes - Added dynamic field rendering - Added FormService to handle future Form handling New files added - [FormService.spring.xml,servicedef.xml,FormController.java,FormService.java,README.md] Files modified - [VendorUsersController.java,cx2_published_dataModel.json,QueryExecutionController.java,cx2-queries.hbm.xml,ManageMunicipalities.variables.json,project-services.xml,EditForm.variables.json,Forms.html,FormTypes.java,Cx2QueryExecutorServiceImpl.java,ManageForms.variables.json,ManageMunicipalities.html,EditForm.html,servicedef.xml,Forms.variables.json,pom.xml,cx2_query.json,Cx2QueryExecutorService.java,Municipalities.java,servicedef.xml]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -339,6 +339,16 @@
                                             </wm-composite>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
+                                    <wm-gridrow name="gridrow36_2">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn61_3">
+                                            <wm-composite name="composite4">
+                                                <wm-label class="col-md-3 control-label" name="label5_1" caption="Form Table Name"></wm-label>
+                                                <wm-container class="col-md-9" name="container4">
+                                                    <wm-text name="textFormTableName" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].formTableName"></wm-text>
+                                                </wm-container>
+                                            </wm-composite>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
                                     <wm-gridrow name="gridrow29">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn64" padding="1em unset" horizontalalign="right">
                                             <wm-button class="btn-default btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdateDevDetails" iconclass="wi wi-update" on-click="Variables.UpdateDevFormDetailsForCXAdmin.invoke()" horizontalalign="right"></wm-button>
