--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -15,8 +15,8 @@
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="" autoclose="outsideClick" name="panelFormStatus" title="Form Status" class="panel-primary">
-                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-4 lg-4" class="media-list" dataset="bind:Variables.FormStatus.dataSet" navigation="Inline" name="livelistStatus" pagesize="4"
-                            selectfirstitem="true" orderby="sortOrder:asc" loadingdatamsg="" nodatamessage="No Status found">
+                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-4 lg-4" class="media-list" dataset="bind:Variables.FormStatus.dataSet" navigation="None" name="livelistStatus" pagesize="4" selectfirstitem="true"
+                            orderby="sortOrder:asc" loadingdatamsg="" nodatamessage="No Status found">
                                 <wm-listtemplate layout="inline" name="listtemplate1">
                                     <wm-container class="media-body" padding="unset unset unset 1.25em" name="container2">
                                         <wm-label name="Name" class="p media-heading" caption="bind:Variables.FormStatus.dataSet.data[$i].status" fontsize="1.143" fontunit="em"></wm-label>
@@ -76,9 +76,15 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow8">
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn12"></wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn13"></wm-gridcolumn>
+                                <wm-gridrow ng-repeat="(colName, colValue) in Variables.svGetFormData.dataSet" ng-if="colName != 'ID' &amp;&amp; colName != 'FormGUID'" name="fieldGridrow{{$index}}">
+                                    <wm-gridcolumn columnwidth="12" name="fieldGridcolumn{{$index}}">
+                                        <wm-composite name="fieldComposite{{$index}}">
+                                            <wm-label class="col-md-3 control-label" name="fieldLabel{{$index}}" caption="{{colName}}"></wm-label>
+                                            <wm-container class="col-md-9" name="container3">
+                                                <wm-text name="{{colName}}" placeholder="Please enter {{colName}}" datavalue="bind:'{{colValue}}'"></wm-text>
+                                            </wm-container>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-panel>
