--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -16,7 +16,7 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="" autoclose="outsideClick" name="panelFormStatus" title="Form Status" class="panel-primary">
                             <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-4 lg-4" class="media-list" dataset="bind:Variables.FormStatus.dataSet" navigation="None" name="livelistStatus" pagesize="4"
-                            selectfirstitem="true" orderby="sortOrder:asc" loadingdatamsg="" nodatamessage="No Status found" disableitem="false" enablereorder="false">
+                            selectfirstitem="false" orderby="sortOrder:asc" loadingdatamsg="" nodatamessage="No Status found" disableitem="false" enablereorder="false" show="true">
                                 <wm-listtemplate layout="inline" name="listtemplate1">
                                     <wm-container class="media-body" padding="unset unset unset 1.25em" name="container2">
                                         <wm-label name="Name" class="p media-heading" caption="bind:Variables.FormStatus.dataSet.data[$i].status" fontsize="1.143" fontunit="em"></wm-label>
@@ -57,7 +57,7 @@
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" horizontalalign="center">
-                                        <wm-button class="btn-default" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus"></wm-button>
+                                        <wm-button class="btn-default btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.RecordFormHistory.invoke()"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                                 </wm-gridrow>
