Created query and variable for displaying CX Companies tile count. Aesthetic updates to ManageCompanies dialog window Files modified - [ManageCompanies.html,CXAdmin.html,CXAdmin.variables.json]

--- a/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
+++ b/src/main/webapp/pages/ManageCompanies/ManageCompanies.html
@@ -44,8 +44,8 @@
                                                 <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn7">
-                                                <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" orderby="stateName:asc"
-                                                displayexpression="stateName"></wm-form-field>
+                                                <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="stateName"
+                                                orderby="stateName:asc"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn8">
                                                 <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -106,8 +106,8 @@
                                                 placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn22">
-                                                <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date"
-                                                outputformat="yyyy-MM-dd" datepattern="MM-dd-yyyy"></wm-form-field>
+                                                <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" datepattern="MM-dd-yyyy" placeholder="Select date"
+                                                outputformat="yyyy-MM-dd"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn23">
                                                 <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="2147483647" permitted="undefined"></wm-form-field>
@@ -115,8 +115,8 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow10">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn24">
-                                                <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
-                                                datepattern="MM-dd-yyyy"></wm-form-field>
+                                                <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" datepattern="MM-dd-yyyy" placeholder="Select date"
+                                                outputformat="yyyy-MM-dd"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
