--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -54,21 +54,6 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn8" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageCompanies.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid9">
-                                <wm-gridrow height="100%" name="gridrow11">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn24">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn25">
-                                        <wm-label name="tileTitle" caption="CX Companies" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn9" padding="2em unset" horizontalalign="center">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMunicipalities.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow5">
@@ -83,7 +68,7 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn10" padding="2em unset" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn9" padding="2em unset" horizontalalign="center">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid5">
                                 <wm-gridrow height="100%" name="gridrow6_1">
@@ -93,6 +78,21 @@
                                     <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn14_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Forms" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.CXAdminFormsCount.dataSet.value" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn10" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageCompanies.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid9">
+                                <wm-gridrow height="100%" name="gridrow11">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn24">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn25">
+                                        <wm-label name="tileTitle" caption="CX Companies" class="p" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.VendorCount.dataSet[$i].VendorCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
