--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -57,7 +57,7 @@
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" horizontalalign="center">
-                                        <wm-button class="btn-default btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.RecordFormHistory.invoke()"></wm-button>
+                                        <wm-button class="btn-default btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.RecordFormHistory.invoke();Variables.UpdateFormStatusInMasterForms.invoke()"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                                 </wm-gridrow>
